--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
+    "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
