--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "daisyui": "^5.0.46",
+    "firebase": "^11.10.0",
     "framer-motion": "^12.23.6",
     "leaflet": "^1.9.4",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router": "^7.6.3",
+    "react-sweetalert2": "^0.6.0",
+    "react-tooltip": "^5.29.1",
     "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.11"
   },
