--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.10.0",
     "daisyui": "^5.0.46",
+    "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.6",
     "leaflet": "^1.9.4",
