--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-sweetalert2": "^0.6.0",
     "react-tooltip": "^5.29.1",
     "styled-components": "^6.1.19",
+    "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
